fixed button alignments again

--- a/src/components/BounceRuleDetailed/index.scss
+++ b/src/components/BounceRuleDetailed/index.scss
@@ -53,12 +53,12 @@
   }
 }
 
-.header-button {
-  width: 125px;
-  &.cancel-button {
-    margin-right: 10px;
-  }
-}
+// .header-button {
+//   width: 125px;
+//   &.cancel-button {
+//     margin-right: 10px;
+//   }
+// }
 
 .sg-button {
   width: 125px;
